added class styles to ibsen file

--- a/playpart.html
+++ b/playpart.html
@@ -18,7 +18,7 @@
     <h4>MRS. ALVING.</h4>
     <p>
     <p>[Still in the doorway.]</p>
-    <p> Mr. Manders.</p>
+    <p class="speech"> Mr. Manders.</p>
     <p> [Turns back towards the dining-room.]</p>
     <p>Aren't
         you coming too, Oswald?</p>
