--- a/playpart.html
+++ b/playpart.html
@@ -4,76 +4,77 @@
 <head>
     <title> My HTML Play</title>
 </head>
+<link rel="stylesheet" type="text/css" href="ibsen.css" />
 
 <body>
     <header>
         <h1>Madhushree Kurri acts in a play</h1>
     </header>
-    <h3> Ghosts by Henrik Ibsen </h3>
+    <h3 class="name"> Ghosts by Henrik Ibsen </h3>
     <p>
-    <p>[The same room. The mist still lies heavy over the landscape.]</p>
+    <p class="direction">[The same room. The mist still lies heavy over the landscape.]</p>
 
-    <p>[MANDERS and MRS. ALVING enter from the dining-room.]</p>
+    <p class="direction">[MANDERS and MRS. ALVING enter from the dining-room.]</p>
 
-    <h4>MRS. ALVING.</h4>
+    <h4 class="MRSALVING">MRS. ALVING.</h4>
     <p>
-    <p>[Still in the doorway.]</p>
+    <p class="direction">[Still in the doorway.]</p>
     <p class="speech"> Mr. Manders.</p>
-    <p> [Turns back towards the dining-room.]</p>
-    <p>Aren't
+    <p class="direction"> [Turns back towards the dining-room.]</p>
+    <p class="speech">Aren't
         you coming too, Oswald?</p>
     </p>
 
-    <h4>OSWALD.</h4>
+    <h4 class="OSWALD">OSWALD.</h4>
     <p>
-    <p>[From within.]</p>
-    <p>No, thank you. I think I shall go out a little.</p>
+    <p class="direction">[From within.]</p>
+    <p class="speech">No, thank you. I think I shall go out a little.</p>
     </p>
 
 
-    <h4>MRS. ALVING.</h4>
+    <h4 class="MRSALVING">MRS. ALVING.</h4>
     <p>
-    <p>Yes, do. The weather seems a little brighter now.</p>
-    <p>[She shuts the dining-room door, goes to the hall door, and calls:] </p>
-    <p>Regina!</p>
+    <p class="speech">Yes, do. The weather seems a little brighter now.</p>
+    <p class="direction">[She shuts the dining-room door, goes to the hall door, and calls:] </p>
+    <p class="speech">Regina!</p>
     </p>
 
 
-    <h4>REGINA.</h4>
+    <h4 class="REGINA">REGINA.</h4>
     <p>
-    <p>[Outside.]</p>
-    <p> Yes, Mrs. Alving? </p>
+    <p class="direction">[Outside.]</p>
+    <p class="speech"> Yes, Mrs. Alving? </p>
     </p>
 
 
-    <h4>MRS. ALVING.</h4>
-    <p> Go down to the laundry, and help with the garlands.</p>
+    <h4 class="MRSALVING">MRS. ALVING.</h4>
+    <p class="speech"> Go down to the laundry, and help with the garlands.</p>
 
 
-    <h4>REGINA.</h4>
-    <p> Yes, Mrs. Alving.</p>
+    <h4 class="REGINA">REGINA.</h4>
+    <p class="speech"> Yes, Mrs. Alving.</p>
 
 
-    <p>[MRS. ALVING assures herself that REGINA goes; then shuts the door.]</p>
+    <p class="direction">[MRS. ALVING assures herself that REGINA goes; then shuts the door.]</p>
 
 
-    <h4>MANDERS.</h4>
-    <p>I suppose he cannot overhear us in there?</p>
+    <h4 class="MANDERS">MANDERS.</h4>
+    <p class="speech">I suppose he cannot overhear us in there?</p>
 
 
-    <h4>MRS. ALVING.</h4>
-    <p> Not when the door is shut. Besides, he's just going out.</p>
+    <h4 class="MRSALVING">MRS. ALVING.</h4>
+    <p class="speech"> Not when the door is shut. Besides, he's just going out.</p>
 
 
-    <h4>MANDERS.</h4>
-    <p>I am still quite upset. I don't know how I could swallow a
+    <h4 class="MANDERS">MANDERS.</h4>
+    <p class="speech">I am still quite upset. I don't know how I could swallow a
         morsel of dinner.</p>
 
 
-    <h4>MRS. ALVING.</h4>
+    <h4 class="MRSALVING">MRS. ALVING.</h4>
     <p>
-    <p>[Controlling her nervousness, walks up and down.]</p>
-    <p> Nor I.
+    <p class="direction">[Controlling her nervousness, walks up and down.]</p>
+    <p class="speech"> Nor I.
         But what is to be done now? </p>
     </p>
 
