--- a/playpart.html
+++ b/playpart.html
@@ -77,9 +77,36 @@
     <p class="speech"> Nor I.
         But what is to be done now? </p>
     </p>
-
-
     </p>
+    <hr>
+<table>
+     <tr>
+       <th>Character</th>
+       <th>Actor</th>
+       <th>Understudy</th>
+     </tr>
+     <tr>
+       <td><b>MRS. ALVING</b></td>
+       <td>Emma Watson</td>
+       <td>Zendaya</td>
+     </tr>
+     <tr>
+       <td><b>OSWALD</b></td>
+       <td>Tom Holland</td>
+       <td>Noah Schnapp</td>
+     </tr>
+     <tr>
+         <td><b>REGINA</b></td>
+         <td>Sophie Turner</td>
+         <td>Elizabeth Olsen</td>
+     </tr>
+     <tr>
+        <td><b>MANDERS</b></td>
+        <td>Robert Downey Jr </td>
+        <td>Hero Fiennes Tiffin</td>
+    </tr>
+   </table>
+<hr>
 
 </body>
 
