--- a/playpart.html
+++ b/playpart.html
@@ -79,34 +79,35 @@
     </p>
     </p>
     <hr>
-<table>
-     <tr>
-       <th>Character</th>
-       <th>Actor</th>
-       <th>Understudy</th>
-     </tr>
-     <tr>
-       <td><b>MRS. ALVING</b></td>
-       <td>Emma Watson</td>
-       <td>Zendaya</td>
-     </tr>
-     <tr>
-       <td><b>OSWALD</b></td>
-       <td>Tom Holland</td>
-       <td>Noah Schnapp</td>
-     </tr>
-     <tr>
-         <td><b>REGINA</b></td>
-         <td>Sophie Turner</td>
-         <td>Elizabeth Olsen</td>
-     </tr>
-     <tr>
-        <td><b>MANDERS</b></td>
-        <td>Robert Downey Jr </td>
-        <td>Hero Fiennes Tiffin</td>
-    </tr>
-   </table>
-<hr>
+    <table>
+        <tr>
+            <th>Character</th>
+            <th>Actor</th>
+            <th>Understudy</th>
+        </tr>
+        <tr>
+            <td><b>MRS. ALVING</b></td>
+            <td>Emma Watson</td>
+            <td>Zendaya</td>
+        </tr>
+        <tr>
+            <td><b>OSWALD</b></td>
+            <td>Tom Holland</td>
+            <td>Noah Schnapp</td>
+        </tr>
+        <tr>
+            <td><b>REGINA</b></td>
+            <td>Sophie Turner</td>
+            <td>Elizabeth Olsen</td>
+        </tr>
+        <tr>
+            <td><b>MANDERS</b></td>
+            <td>Robert Downey Jr </td>
+            <td>Hero Fiennes Tiffin</td>
+        </tr>
+    </table>
+    <hr>
+    <a href="extra.html" target="_blank">Click here for extra act</a>
 
 </body>
 
