--- a/playpart.html
+++ b/playpart.html
@@ -3,8 +3,10 @@
 
 <head>
     <title> My HTML Play</title>
+    <link rel="stylesheet" type="text/css" href="ibsen.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<link rel="stylesheet" type="text/css" href="ibsen.css" />
+
 
 <body>
     <header>
@@ -107,7 +109,18 @@
         </tr>
     </table>
     <hr>
-    <a href="extra.html" target="_blank">Click here for extra act</a>
+    <a href="secondact.html" target="_blank">Click here for secondact</a>
+    <hr>
+    <p>Image Captured:</p>
+    <i class="material-icons" style="font-size:48px;color:hotpink;">add_a_photo</i>
+    <i class="material-icons" style="font-size:48px;color:cornflowerblue;">brush</i>
+    <i class="material-icons" style="font-size:48px;color:slategray;">brightness_4</i>
+    <br>
+    <img src="Rabbit.jpg" alt="Icons" style="width: 360px; height: 500px;">
+    <br>
+    <ul class="navbar-horizontal">
+        <li> <a href="playpart.html">First</a> </li>
+        <li> <a href="secondact.html">Second</a> </li>
 
 </body>
 
