--- a/secondact.html
+++ b/secondact.html
@@ -35,8 +35,13 @@
     <h4 class="MANDERS">MANDERS.</h4>
     <p class="speech">Well then, with your nearest relatives--as your duty bade
         you--with your mother and your two aunts.</p>
-        <hr>
-        <a href="playpart.html" target="_blank">Click here for playpart act</a>
+    <hr>
+    <a href="playpart.html" target="_blank">Click here for playpart act</a>
+    <hr>
+    <ul class="navbar-horizontal">
+        <li> <a href="playpart.html">First</a> </li>
+        <li> <a href="secondact.html">Second</a> </li>
+    </ul>
 </body>
 
 </html>
