--- a/secondact.html
+++ b/secondact.html
@@ -36,6 +36,34 @@
     <p class="speech">Well then, with your nearest relatives--as your duty bade
         you--with your mother and your two aunts.</p>
     <hr>
+    <table>
+        <tr>
+            <th>Character</th>
+            <th>Actor</th>
+            <th>Understudy</th>
+        </tr>
+        <tr>
+            <td><b>MRS. ALVING</b></td>
+            <td>Emma Watson</td>
+            <td>Zendaya</td>
+        </tr>
+        <tr>
+            <td><b>OSWALD</b></td>
+            <td>Tom Holland</td>
+            <td>Noah Schnapp</td>
+        </tr>
+        <tr>
+            <td><b>REGINA</b></td>
+            <td>Sophie Turner</td>
+            <td>Elizabeth Olsen</td>
+        </tr>
+        <tr>
+            <td><b>MANDERS</b></td>
+            <td>Robert Downey Jr </td>
+            <td>Hero Fiennes Tiffin</td>
+        </tr>
+    </table>
+    <hr>
     <a href="playpart.html" target="_blank">Click here for playpart act</a>
     <hr>
     <ul class="navbar-horizontal">
